--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codeclan.example.chordisto">
+
+    <uses-feature
+        android:name="android.software.midi"
+        android:required="true" />
+
+    <service android:name=".VirtualDeviceService"
+        android:label="@string/service_name">
+        <intent-filter>
+            <action android:name="android.media.midi.MidiDeviceService" />
+        </intent-filter>
+        <meta-data android:name="android.media.midi.MidiDeviceService"
+            android:resource="@xml/device_info" />
+    </service>
 
     <application
         android:allowBackup="true"
@@ -7,7 +21,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".MidiActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
