--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile project(':MidiDriver-all-release')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
 }
