--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".android.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SongbookActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".SaveAndEditActivity"
-            android:parentActivityName=".MainActivity">
+        <activity android:name=".android.activity.SongbookActivity"
+            android:parentActivityName=".android.activity.MainActivity"/>
+        <activity android:name=".android.activity.SaveAndEditActivity"
+            android:parentActivityName=".android.activity.MainActivity">
         </activity>
     </application>
 
