--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".android.activity.MainActivity">
+        <activity android:name=".app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,9 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".android.activity.SongbookActivity"
-            android:parentActivityName=".android.activity.MainActivity"/>
+            android:parentActivityName=".app.MainActivity"/>
         <activity android:name=".android.activity.SaveAndEditActivity"
-            android:parentActivityName=".android.activity.MainActivity">
+            android:parentActivityName=".app.MainActivity">
         </activity>
     </application>
 
